# metadata_extractors_registry

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Procfile  README.md  app.py  pyproject.toml  requirements.txt  tasks.py
.github/: fly.toml
.github/workflows/: deploy.yml  validate.yml
marda_registry/: __init__.py  app.py  utils.py
marda_registry/data/: extractors.json  filetypes.json  meta.json
marda_registry/data/extractors/: galvani.yml  neware-nda-reader.yaml  pasta-converters.yml  quantumespresso.yml  rosettasciio.yaml  rosettasciio.yml  yadg  yadg.yml  zeiss-tiff-meta.yml
marda_registry/data/filetypes/: agilent-ch.yml  agilent-dx.yml  biologic-mpr.yml  biologic-mpt.yml  doli-mvl.yml  fischer-scope-hap.yml  keysight-g200-mss.yml  kla-g200x-nmd.yml  neware-nda.yml  nexus.yml  panalytical-xrdml.yml  phi-spe.yml  qe-cp-in.yml  qe-pw-in.yml  quantum-design-dat.yml  renishaw-wdf.yml  zeiss-tiff.yml
marda_registry/data/lfs/agilent-ch/: hplc.CH
marda_registry/data/lfs/agilent-dx/: hplc.dx
marda_registry/data/lfs/biologic-mpr/: ca.mpr  gcpl.mpr  peis.mpr
marda_registry/data/lfs/biologic-mpt/: cv.mpt  gcpl.mpt  lsv.mpt
marda_registry/data/lfs/doli-mvl/: Membrane2_03.mvl
marda_registry/data/lfs/fischerScope-hap/: Al.hap
marda_registry/data/lfs/keysight-g200-mss/: FS.mss
marda_registry/data/lfs/klaG200X-nmd/: FS.NMD
marda_registry/data/lfs/panalytical-xrdml/: xrd.xrdml
marda_registry/data/lfs/phi-spe/: xps.spe
marda_registry/data/lfs/qe-cp-in/: cp.in
marda_registry/data/lfs/qe-pw-in/: pw.in
marda_registry/models/: __init__.py
marda_registry/static/: style.css
marda_registry/templates/: base.html  extractor.html  extractors.html  filetype.html  filetypes.html  index.html
registry/: extractors.json  filetypes.json  meta.json
tests/: test_extractors.py
(+2 files in other folders)
